# LD51

./: .gitignore  CMakeLists.txt  README.md
data/assets/shaders/: FullScreenTri.vert.glsl  LinesBatched.vert.glsl  PrimitiveBatched.vert.glsl  QuadBatched.frag.glsl  QuadBatched.vert.glsl  SimpleColor.frag.glsl
data/assets/shaders/bloom/: Downsample.comp.glsl  Downsample.cs.glsl  DownsampleLowPass.comp.glsl  DownsampleLowPass.cs.glsl  TonemapAndDither.comp.glsl  Upsample.comp.glsl  Upsample.cs.glsl
data/assets/shaders/particles/: AddParticles.comp.glsl  RenderParticles.comp.glsl  ResolveParticleImage.frag.glsl  UpdateParticles.comp.glsl
src/: Application.cpp  Application.h  Exception.h  GAssert.cpp  GAssert.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  main.cpp
src/ecs/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/ecs/components/: DebugDraw.h
src/ecs/components/core/: Collider.h  Lifetime.h  Sprite.h  Tag.h  Transform.h
src/ecs/events/: AddParticles.h  AddSprite.h  AxisBindingBase.h  Collision.h
src/ecs/systems/: DebugSystem.cpp  DebugSystem.h  RenderingSystem.cpp  RenderingSystem.h  System.cpp  System.h
src/ecs/systems/core/: CollisionSystem.cpp  CollisionSystem.h  LifetimeSystem.cpp  LifetimeSystem.h
src/ecs/systems/game/: ParticleSystem.cpp  ParticleSystem.h
src/utils/: EventBus.h  LoadFile.cpp  LoadFile.h  Timer.h
